Fix alignment

--- a/src/components/Dashboard/Card/BestSellingCard.module.css
+++ b/src/components/Dashboard/Card/BestSellingCard.module.css
@@ -1,7 +1,7 @@
 .container {
     padding: 20px;
     margin: 10px;
-    width: 45%;
+    /* width: 45%; */
     border-radius: 10px;
     background-color: whitesmoke;
     color: black;
